failure log (flog) stats